{
  "version": 4,
  "terraform_version": "1.9.1",
  "serial": 20,
  "lineage": "46537991-aeb7-3614-6bff-5e7a40877fe9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "myeip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0926ca6557a5c64ec",
            "arn": "arn:aws:ec2:ap-southeast-2:160071257600:elastic-ip/eipalloc-0926ca6557a5c64ec",
            "domain": "vpc",
            "id": "eipalloc-0926ca6557a5c64ec",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-52-62-20-162.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "52.62.20.162",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:160071257600:internet-gateway/igw-0a4f1841ecde175c9",
            "id": "igw-0a4f1841ecde175c9",
            "owner_id": "160071257600",
            "tags": {
              "Name": "myigw"
            },
            "tags_all": {
              "Name": "myigw"
            },
            "vpc_id": "vpc-032742ad6ab0e68d7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mynat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0926ca6557a5c64ec",
            "association_id": "eipassoc-07117f7b21d68362f",
            "connectivity_type": "public",
            "id": "nat-0789b5fa10fa19726",
            "network_interface_id": "eni-005a360b1b2cab48b",
            "private_ip": "192.168.1.6",
            "public_ip": "52.62.20.162",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-045f7825536b1f238",
            "tags": {
              "Name": "mynat"
            },
            "tags_all": {
              "Name": "mynat"
            }
          },
          "dependencies": [
            "aws_eip.myeip",
            "aws_subnet.pubsub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mypubrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:160071257600:route-table/rtb-0e724b19df6995259",
            "id": "rtb-0e724b19df6995259",
            "owner_id": "160071257600",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a4f1841ecde175c9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mypubrt"
            },
            "tags_all": {
              "Name": "mypubrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-032742ad6ab0e68d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mypvtrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:160071257600:route-table/rtb-03c59632f15b890d6",
            "id": "rtb-03c59632f15b890d6",
            "owner_id": "160071257600",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0789b5fa10fa19726",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mypvtrt"
            },
            "tags_all": {
              "Name": "mypvtrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-032742ad6ab0e68d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.myeip",
            "aws_nat_gateway.mynat",
            "aws_subnet.pubsub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mypubrtasso1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5b8c80ad4f6997f",
            "route_table_id": "rtb-0e724b19df6995259",
            "subnet_id": "subnet-045f7825536b1f238"
          },
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_route_table.mypubrt",
            "aws_subnet.pubsub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mypubrtasso2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7980c5b4ac4db72",
            "route_table_id": "rtb-0e724b19df6995259",
            "subnet_id": "subnet-0713f82585c46e2cc"
          },
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_route_table.mypubrt",
            "aws_subnet.pubsub2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mypvtrtasso1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d4b26554088a266",
            "route_table_id": "rtb-03c59632f15b890d6",
            "subnet_id": "subnet-0f6e42199800337fa"
          },
          "dependencies": [
            "aws_eip.myeip",
            "aws_nat_gateway.mynat",
            "aws_route_table.mypvtrt",
            "aws_subnet.prisub1",
            "aws_subnet.pubsub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mypvtrtasso2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01309758bbc2f70b3",
            "route_table_id": "rtb-03c59632f15b890d6",
            "subnet_id": "subnet-0984935543fb386c8"
          },
          "dependencies": [
            "aws_eip.myeip",
            "aws_nat_gateway.mynat",
            "aws_route_table.mypvtrt",
            "aws_subnet.prisub2",
            "aws_subnet.pubsub1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prisub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:160071257600:subnet/subnet-0f6e42199800337fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "192.168.1.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6e42199800337fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160071257600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prisub1"
            },
            "tags_all": {
              "Name": "prisub1"
            },
            "vpc_id": "vpc-032742ad6ab0e68d7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prisub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:160071257600:subnet/subnet-0984935543fb386c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "192.168.1.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0984935543fb386c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160071257600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prisub2"
            },
            "tags_all": {
              "Name": "prisub2"
            },
            "vpc_id": "vpc-032742ad6ab0e68d7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:160071257600:subnet/subnet-045f7825536b1f238",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "192.168.1.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045f7825536b1f238",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160071257600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pubsub1"
            },
            "tags_all": {
              "Name": "pubsub1"
            },
            "vpc_id": "vpc-032742ad6ab0e68d7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:160071257600:subnet/subnet-0713f82585c46e2cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "192.168.1.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0713f82585c46e2cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160071257600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pubsub2"
            },
            "tags_all": {
              "Name": "pubsub2"
            },
            "vpc_id": "vpc-032742ad6ab0e68d7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "secsub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:160071257600:subnet/subnet-04334c5bfcea608bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "192.168.1.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04334c5bfcea608bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160071257600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "secsub1"
            },
            "tags_all": {
              "Name": "secsub1"
            },
            "vpc_id": "vpc-032742ad6ab0e68d7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "secsub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:160071257600:subnet/subnet-0b6f5ebd078cc5732",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "192.168.1.80/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6f5ebd078cc5732",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160071257600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "secsub2"
            },
            "tags_all": {
              "Name": "secsub2"
            },
            "vpc_id": "vpc-032742ad6ab0e68d7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:160071257600:vpc/vpc-032742ad6ab0e68d7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.1.0/25",
            "default_network_acl_id": "acl-0bfaa668bc7a2fb3a",
            "default_route_table_id": "rtb-0dfbaf96163ddf338",
            "default_security_group_id": "sg-0a23bdc538f115760",
            "dhcp_options_id": "dopt-00ddd710733458640",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-032742ad6ab0e68d7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dfbaf96163ddf338",
            "owner_id": "160071257600",
            "tags": {
              "Name": "var.prefix"
            },
            "tags_all": {
              "Name": "var.prefix"
            }
          }
        }
      ]
    }
  ]
}